added fixed styling for bars and added a portrait WIP

--- a/sempiternal/src/Components/Game/UI/ManaBar/styles.css
+++ b/sempiternal/src/Components/Game/UI/ManaBar/styles.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 20px;
     width: 350px;
-    margin: auto;
+    margin-left: 150px;
     margin-top: 5px;
     border-radius: 50px;
     border: 1px solid #333;
