--- a/sempiternal/src/Components/Game/UI/HealthBar/styles.css
+++ b/sempiternal/src/Components/Game/UI/HealthBar/styles.css
@@ -9,7 +9,7 @@
 }
 
 .filler {
-    background: red;
+    background: rgb(255, 51, 0);
     height: 100%;
     border-radius: inherit;
     transition: width .2s ease-in;
