--- a/sempiternal/src/Components/Game/UI/XP/styles.css
+++ b/sempiternal/src/Components/Game/UI/XP/styles.css
@@ -10,7 +10,7 @@
 }
 
 .fillerXP {
-    background: yellow;
+    background: rgba(255, 187, 0, 0.767);
     height: 100%;
     border-radius: inherit;
     transition: width .2s ease-in;
