fixed most of the boundaries and movement bugs

--- a/sempiternal/src/Components/Game/UI/HealthBar/styles.css
+++ b/sempiternal/src/Components/Game/UI/HealthBar/styles.css
@@ -4,7 +4,8 @@
     width: 350px;
     margin-left: 150px;
     border-radius: 50px;
-    border: 1px solid #333;
+    overflow: hidden;
+    border: 2px solid #333;
     background-color: white;
 }
 
