--- a/sempiternal/src/Components/Game/UI/XP/styles.css
+++ b/sempiternal/src/Components/Game/UI/XP/styles.css
@@ -5,7 +5,8 @@
     margin-left: 150px;
     margin-top: 5px;
     border-radius: 50px;
-    border: 1px solid #333;
+    overflow: hidden;
+    border: 2px solid #333;
     background-color: white;
 }
 
