fixed rendering bug, and fireball rendering draft

--- a/sempiternal/src/Components/Game/UI/HUD/styles.css
+++ b/sempiternal/src/Components/Game/UI/HUD/styles.css
@@ -1,6 +1,8 @@
 .hud {
-    width: 800px;
-    height: 76.5px;
-    margin: auto;
-    background-color: lightblue;
+    width: 400px;
+    height: 81.5px;
+    /* margin-left: 90px; */
+    /* background-color: lightblue; */
+    /* background-position: center; */
+    z-index: 4;
 }
