--- a/sempiternal/src/Components/Game/UI/HealthBar/styles.css
+++ b/sempiternal/src/Components/Game/UI/HealthBar/styles.css
@@ -1,12 +1,16 @@
 .healthBar {
     position: relative;
     height: 20px;
-    width: 350px;
-    margin-left: 150px;
+    width: 175px;
+    top: -51px;
+    left: -106px;
+    /* margin-left: 150px; */
     border-radius: 50px;
     overflow: hidden;
     border: 2px solid #333;
     background-color: white;
+    display: inline-block;
+    z-index: 4;
 }
 
 .filler {
@@ -14,4 +18,9 @@
     height: 100%;
     border-radius: inherit;
     transition: width .2s ease-in;
+}
+
+.hpNum {
+    z-index: 15;
+    margin-left: 57px;
 }
