--- a/sempiternal/src/Components/Game/UI/ManaBar/styles.css
+++ b/sempiternal/src/Components/Game/UI/ManaBar/styles.css
@@ -1,13 +1,17 @@
 .manaBar {
     position: relative;
+    top: -56px;
+    left: 11px;
     height: 20px;
-    width: 350px;
-    margin-left: 150px;
-    margin-top: 5px;
+    width: 175px;
+    /* margin-left: 150px; */
+    /* margin-top: 5px; */
     border-radius: 50px;
     overflow: hidden;
     border: 2px solid #333;
+    display: inline-block;
     background-color: white;
+    z-index: 4;
 }
 
 .fillerMana {
@@ -15,4 +19,8 @@
     height: 100%;
     border-radius: inherit;
     transition: width .2s ease-in;
+}
+
+.mpNum {
+    z-index: 15;
 }
