--- a/sempiternal/src/Components/Web/splashScreen/style.css
+++ b/sempiternal/src/Components/Web/splashScreen/style.css
@@ -20,7 +20,7 @@ body {
       }
       
       .welcome #welcome {
-        background: #eeff55 ;
+        background: #b5c348 ;
         width: 56px;
         height: 56px;
         position: absolute;
