--- a/sempiternal/src/Components/Web/auth/register.css
+++ b/sempiternal/src/Components/Web/auth/register.css
@@ -1,15 +1,25 @@
-#name,
-#email,
-#password,
-#repeat-password{
+input,
+#input-field{
     width: 300px;
     height: 50px;
     display: inline-block;
     margin-bottom: 10px;
     border: none;
     background-color: transparent;
-    border-bottom: 2px solid rgb(83, 182, 193);
+    border-bottom: 1px solid rgb(255, 205, 238);
     outline: none; 
    font-size: 22px;
    color: #fff;
 }
+
+#input-field:focus{
+    transition: ease-in-out, width .35s ease-in-out;
+    width: 400px;
+    background-color: transparent;
+}
+
+/* #input-field:active{
+    transition: ease-in-out, width .35s ease-in-out;
+    width: 300px;
+    background-color: transparent;
+} */
