--- a/sempiternal/src/Components/Game/UI/ManaBar/styles.css
+++ b/sempiternal/src/Components/Game/UI/ManaBar/styles.css
@@ -1,7 +1,7 @@
 .manaBar {
     position: relative;
-    top: -56px;
-    left: 11px;
+    top: -29px;
+    left: -280px;
     height: 20px;
     width: 175px;
     /* margin-left: 150px; */
@@ -22,5 +22,8 @@
 }
 
 .mpNum {
+    position: relative;
+    top: -5px;
+    left: 2px;
     z-index: 15;
 }
