--- a/sempiternal/src/Components/Game/Map/styles.css
+++ b/sempiternal/src/Components/Game/Map/styles.css
@@ -2,15 +2,12 @@
     display: inline-flex;
     /* background-color: transparent; */
 }
-
 .rock {
     background-image: url("../../../Tiles/rock.png");
 }
-
 .grass {
     background-image: url("../../../Tiles/grass.png");
 }
-
 .tree {
     background-image: url("../../../Tiles/tree.png");
 }
@@ -20,14 +17,27 @@
 .gold {
     background-image: url("../../../Tiles/gold.png");
 }
-
 .fountain {
     background-image: url("../../../Tiles/fountain.png");
 }
-
 .sword {
     background-image: url("../../../Tiles/sword.png");
 }
 .treasure {
     background-image: url("../../../Tiles/treasure.png");
+}
+.rock1 {
+    background-image: url("../../../Tiles/rock1.png");
+}
+.shield {
+    background-image: url("../../../Tiles/shield.png");
+}
+.bridge1 {
+    background-image: url("../../../Tiles/bridge1.png");
+}
+.bridge2 {
+    background-image: url("../../../Tiles/bridge2.png");
+}
+.bridge3 {
+    background-image: url("../../../Tiles/bridge3.png");
 }
